--- a/kxxxl/src/main/res/layout/activity_main.xml
+++ b/kxxxl/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.164" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/but_demo"
         android:layout_width="114dp"
         android:layout_height="44dp"
         android:layout_marginStart="148dp"
